--- a/phishing-app-backend/package.json
+++ b/phishing-app-backend/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
+    "@types/nodemailer": "^6.4.17",
     "typescript": "^4.0.0"
   }
 }
